<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.m14x.basicphrases.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/hello"
            android:id="@+id/hello"
            android:textAlignment="center"
            android:onClick="buttonTapped" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/hru"
            android:id="@+id/howareyou"
            android:textAlignment="center"
            android:onClick="buttonTapped" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/gEve"
            android:id="@+id/goodevening"
            android:textAlignment="center"
            android:onClick="buttonTapped" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/please"
            android:id="@+id/please"
            android:textAlignment="center"
            android:onClick="buttonTapped" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/myName"
            android:id="@+id/mynameis"
            android:textAlignment="center"
            android:onClick="buttonTapped" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/speakEnglish"
            android:id="@+id/doyouspeakenglish"
            android:textAlignment="center"
            android:onClick="buttonTapped" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/welcome"
            android:id="@+id/welcome"
            android:textAlignment="center"
            android:onClick="buttonTapped" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/liveIn"
            android:id="@+id/ilivein"
            android:textAlignment="center"
            android:onClick="buttonTapped" />
    </GridLayout>


</RelativeLayout>
